[tool.poetry]
name = "d-z-19-1"
version = "0.1.0"
description = ""
authors = ["Nina Finageeva <finageeva.nina@mail.ru>"]
readme = "README.md"
packages = [{include = "d_z_19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
